<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f4f4f4">

    <ListView
        android:id="@+id/listViewPersonas"
        android:layout_width="fill_parent"
        android:divider="#f4f4f4"
        android:dividerHeight="7dp"
        android:layout_height="690dp" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/icon_btn_flo_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#46b1bb"
        fab:menu_colorPressed="#3d979f"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#46b1bb"
        fab:menu_labels_colorPressed="#3d979f"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66aff198"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/icon_btn_flo_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_btn_flo_1"
            fab:fab_label="@string/btn_flo_1"
            fab:fab_size="mini"
            android:clickable="false" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/icon_btn_flo_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sinaccion_borrar"
            fab:fab_label="@string/btn_flo_2"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/icon_btn_flo_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sinaccion_borrar"
            fab:fab_label="@string/btn_flo_3"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>

</AbsoluteLayout>
